# downloader

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  IOS.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: settings.local.json
.claude/hooks/: ruff_format.py
.claude/skills/media-tools/: SKILL.md
.github/workflows/: ci.yml  claude.yml  docker.yml
docker/: entrypoint.sh
downloader/: main.py
extension/: README.md  background.js  manifest.json  options.html  options.js
src/downloader/: __init__.py  __main__.py  config.py  models.py
src/downloader/cli/: __init__.py  app.py  render.py
src/downloader/core/: __init__.py  api.py  api_client.py  cf_access.py  daemon.py  engine.py  events.py  scheduler.py  service.py  worker.py
src/downloader/core/web/: index.html  manifest.webmanifest  sw.js
src/downloader/services/: __init__.py  dedup.py  formats.py  intake.py  naming.py  resolver.py  scrape.py  sites.py
src/downloader/store/: __init__.py  db.py  hashes_repo.py  jobs_repo.py
src/downloader/tools/: __init__.py  aria2.py  base.py  ffmpeg.py  http_downloader.py  ytdlp.py
tests/: test_api.py  test_aria2_parser.py  test_cf_access.py  test_config_env.py  test_daemon.py  test_dedup.py  test_engine.py  test_ffmpeg_hls.py  test_formats.py  test_http_resume.py  test_jobs_repo.py  test_naming.py  test_resolver.py  test_scrape.py  test_service.py  test_sites.py  test_smoke.py  test_ytdlp_parser.py
