[project]
name = "downloader"
version = "0.1.0"
description = "Персональный менеджер закачек (обёртка над aria2/yt-dlp/ffmpeg)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pydantic>=2",
    "rich>=15.0.0",
    "static-ffmpeg>=3.0",
    "typer>=0.12",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
dl = "downloader.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/downloader"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
